--- a/SneakersR/src/index.scss
+++ b/SneakersR/src/index.scss
@@ -1,13 +1,13 @@
 body {
   margin: 0;
-  font-family: 'iner' , system-ui;
+  font-family: "iner", system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #e7f6ff;
+  background-color: #21a5f8;
 }
 
 * {
-  font-family: 'inter', system-ui;
+  font-family: "inter", system-ui;
 }
 
 .wrapper {
@@ -19,20 +19,20 @@ body {
 }
 
 header {
-border-bottom: 1px solid #eaeaea;
-  img{
+  border-bottom: 1px solid #eaeaea;
+  img {
     margin-right: 15px;
     cursor: pointer;
   }
-h3,
-p {
-  margin: 0;
- }
+  h3,
+  p {
+    margin: 0;
+  }
 }
 
 .content {
-  h1{
-    margin:0;
+  h1 {
+    margin: 0;
   }
 }
 
@@ -50,20 +50,18 @@ p {
   &:hover {
     img {
       transform: rotate(180deg) translateX(10px);
-      transition: transform 0.40s ease-in-out;
-
+      transition: transform 0.4s ease-in-out;
     }
   }
   .aric {
-    transform:translateY(20px) ;
+    transform: translateY(20px);
     position: relative;
     top: 1px;
-     transform: rotate(180deg);
+    transform: rotate(180deg);
     margin-right: 15px;
     transition: transform 0.15s ease-in-out;
   }
 }
-
 
 .search-block {
   border: 1px solid #f3f3f3;
@@ -72,14 +70,13 @@ p {
   position: relative;
 
   .clear {
-  position: absolute;
-  right: 0;
-  width: 18px;
-  height: 18px;
-  top: 13px;
-  right: 15px;
-}
-
+    position: absolute;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    top: 13px;
+    right: 15px;
+  }
 
   input {
     border: 0px;
@@ -94,10 +91,9 @@ p {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba( 0, 0, 0, 0.01);
+  background-color: rgba(0, 0, 0, 0.01);
   z-index: 1;
 }
-
 
 .drawer {
   display: flex;
@@ -107,77 +103,73 @@ p {
   right: 0;
   height: 100%;
   background: #ffffff;
-  box-shadow: -10px 4px 24px rgba( 0, 0, 0, 0.01);
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.01);
   padding: 30px;
 
   .items {
-   overflow: auto;
+    overflow: auto;
     margin-bottom: 40px;
   }
 
-h2 {
-  margin: 0;
- }
+  h2 {
+    margin: 0;
+  }
 }
 
 .cartTotalBlock {
   ul {
     margin-bottom: 20px;
 
-li {
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 40px !important;
+    li {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 40px !important;
 
-
-  div {
-    flex:1;
-    height: 1px;
-    border-bottom: 1px dashed #dfdfdf; 
+      div {
+        flex: 1;
+        height: 1px;
+        border-bottom: 1px dashed #dfdfdf;
+        position: relative;
+        top: -4px;
+        margin: 0 7px;
+      }
+    }
+  }
+  .greenButton {
     position: relative;
-    top: -4px;
-    margin: 0 7px;
-   }
-  } 
- }
- .greenButton {
-   position: relative;
 
-   &:hover {
-     img {
-       transform: translateX(10px);
-     }
-   }
-   
-   img {
-     position: absolute;
-     right: 40px;
-     top: 20px;
-     transition: transform 0.2s ease-in-out;
-     
-   }
- }
+    &:hover {
+      img {
+        transform: translateX(10px);
+      }
+    }
 
-}   
- .greenButton {
-  width: 100%; 
+    img {
+      position: absolute;
+      right: 40px;
+      top: 20px;
+      transition: transform 0.2s ease-in-out;
+    }
+  }
+}
+.greenButton {
+  width: 100%;
   height: 55px;
   background: #9dd558;
   border-radius: 18px;
-  border:0;
+  border: 0;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
-  transition: background 0.1 ease-in-out;  
+  transition: background 0.1 ease-in-out;
   &:hover {
     background: lightten(#9dd558), 5%;
   }
   &:active {
     background: darken(#9dd558, 5%);
-
   }
- }
+}
 
 .cartItem {
   border: 1px solid #f3f3f3;
@@ -192,7 +184,6 @@ li {
     background-position: 0 -3px;
     background-repeat: no-repeat;
     margin-right: 20px;
-
   }
 
   p {
@@ -206,11 +197,10 @@ li {
   .removeBtn {
     opacity: 0.5;
     cursor: pointer;
-    transition: opacity 0.15s ease-in-out ;
+    transition: opacity 0.15s ease-in-out;
 
-   &:hover {
+    &:hover {
       opacity: 1;
     }
-
   }
 }
