--- a/SneakersR/src/index.scss
+++ b/SneakersR/src/index.scss
@@ -3,7 +3,7 @@ body {
   font-family: "iner", system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #b5d3e7;
+  background-color: #ed87f5;
 }
 
 * {
@@ -12,7 +12,7 @@ body {
 
 .wrapper {
   background: #ffffff;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 10px 20px rgba(216, 89, 89, 0.04);
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
