--- a/SneakersR/src/index.scss
+++ b/SneakersR/src/index.scss
@@ -3,7 +3,7 @@ body {
   font-family: "iner", system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #acc039;
+  background-color: #961b92;
 }
 
 * {
